fix: apply contrast themes to sponsor logos

--- a/src/assets/styles/base/_base.css
+++ b/src/assets/styles/base/_base.css
@@ -80,13 +80,43 @@ main section:last-of-type:not(:first-of-type) {
 }
 
 /* Image Theming */
-
 .fl-theme-bw,
 .fl-theme-wb,
 .fl-theme-lgdg,
 .fl-theme-gw,
 .fl-theme-gd {
     img {
+        filter: grayscale(1);
+    }
+}
+
+.fl-theme-bw,
+.fl-theme-gw {
+    a img,
+    a:active img,
+    a:hover:focus img,
+    a:focus:active img,
+    a:hover:active img {
+        filter: grayscale(1);
+    }
+
+    a:hover img {
+        filter: grayscale(1) invert();
+    }
+}
+
+.fl-theme-wb,
+.fl-theme-gd,
+.fl-theme-lgdg {
+    a img,
+    a:active img,
+    a:hover:focus img,
+    a:focus:active img,
+    a:hover:active img {
+        filter: grayscale(1) invert();
+    }
+
+    a:hover img {
         filter: grayscale(1);
     }
 }
@@ -98,9 +128,49 @@ main section:last-of-type:not(:first-of-type) {
     }
 }
 
+.fl-theme-by {
+    a img,
+    a:active img,
+    a:hover:focus img,
+    a:focus:active img,
+    a:hover:active img {
+        filter: url("#yellow");
+    }
+
+    a:hover img {
+        filter: grayscale(1) invert();
+    }
+}
+
+.fl-theme-yb {
+    a img,
+    a:active img,
+    a:hover:focus img,
+    a:focus:active img,
+    a:hover:active img {
+        filter: grayscale(1) invert();
+    }
+
+    a:hover img {
+        filter: url("#yellow");
+    }
+}
+
 .fl-theme-bbr {
     img {
         filter: url("#brown");
+    }
+
+    a img,
+    a:active img,
+    a:hover:focus img,
+    a:focus:active img,
+    a:hover:active img {
+        filter: url("#brown");
+    }
+
+    a:hover img {
+        filter: url("#brown") invert();
     }
 }
 
@@ -131,6 +201,19 @@ a:not([class]) {
         border-radius: 0.3125rem;
         box-shadow: 0 0 0 0.25rem var(--fl-linkFgColor, var(--color-indigo-700));
         color: var(--fl-bgColor, var(--color-white));
+    }
+}
+
+a:not([class]):has(img) {
+    &:hover {
+    }
+
+    &:focus,
+    &:hover:focus {
+    }
+
+    &:active {
+        background-color: transparent;
     }
 }
 
